--- a/Test.cbp
+++ b/Test.cbp
@@ -2,31 +2,29 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Prototype" />
+		<Option title="Test" />
+		<Option platforms="Unix;" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Prototype" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Test" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
-					<Add option="-DSFML_STATIC" />
 				</Compiler>
 				<Linker>
-					<Add option="-lsfml-graphics-s-d" />
-					<Add option="-lsfml-window-s-d" />
-					<Add option="-lsfml-system-s-d" />
-					<Add option="-lsfml-audio-s-d" />
-					<Add option="-lsfml-network-s-d" />
-					<Add option="-lopengl32" />
+					<Add option="-lsfml-graphics" />
+					<Add option="-lsfml-window" />
+					<Add option="-lsfml-system" />
+					<Add option="-lsfml-network" />
+					<Add option="-lsfml-audio" />
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Prototype" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Test" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
@@ -36,26 +34,34 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add option="-lsfml-graphics-s-d" />
-					<Add option="-lsfml-window-s-d" />
-					<Add option="-lsfml-system-s-d" />
-					<Add option="-lsfml-audio-s-d" />
-					<Add option="-lsfml-network-s-d" />
-					<Add option="-lopengl32" />
+					<Add option="-lsfml-graphics" />
+					<Add option="-lsfml-window" />
+					<Add option="-lsfml-system" />
+					<Add option="-lsfml-network" />
+					<Add option="-lsfml-audio" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="include/math.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/math.cpp" />
 		<Extensions>
 			<code_completion />
-			<envvars />
 			<debugger />
-			<lib_finder disable_auto="1" />
+			<DoxyBlocks>
+				<comment_style block="0" line="0" />
+				<doxyfile_project />
+				<doxyfile_build />
+				<doxyfile_warnings />
+				<doxyfile_output />
+				<doxyfile_dot />
+				<general />
+			</DoxyBlocks>
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
